# codility-learning

./: .gitignore  README.md  pom.xml
.github/workflows/: workflow.yaml
game/: .env  .env-template  .gitignore  README.md  client.py  client_communicator.ipynb  config.py  config_server.py  enums.py  game_board.py  logs.py  map.py  mcp-client.py  mcp-server.py  message.py  player.py  promptings.py  pyproject.toml  server.py  status.py  test-agent.ipynb  test-run-muli-clients.py  test-server.ipynb  utils.py
mycv/: software_engineer.tex
src/coding_game/: HyperSonic.java  main.cpp  temp.cpp
src/main/java/org/example/: Main.java
src/main/java/org/example/code_tour/challenge_1/: Homework.java  Swimming.java  VNGGames.java
src/main/java/org/example/code_tour/warm_up/: BoNam.java  HexColor.java  LatGach.java
src/main/java/org/example/codility/BinaryAearchAlgorithm/: BinarySearch.java
src/main/java/org/example/codility/binary_search_algorithm/: BinarySearch.java
src/main/java/org/example/codility/counting_element/: MaxCounters.ipynb  MaxCounters.java  MissingInteger.java  PermCheck.java  RogRiverOne.java
src/main/java/org/example/codility/dynamic_programming/: CoinChanging.ipynb  CoinChanging.java
src/main/java/org/example/codility/sorting/: Distinct.java  (+3 more)
src/main/java/org/example/data_structure/: 19120484.py
src/main/java/org/example/mini_exercise/: CapitalizeString.java  MyMath.java
src/main/java/org/example/util/: Logger.java
src/main/resources/question_1/: file_1.txt  file_3.txt
src/test/java/org/example/mini_exercise/: CapitalizeStringTest.java
(+118 files in other folders)
